--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -13,6 +13,16 @@
   <meta property="og:type" content="{% block og_type %}website{% endblock %}">
   <meta property="og:url" content="{% block og_url %}{{ config.base_url }}{% endblock %}">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="{{ get_url(path='images/favicon.ico') }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ get_url(path='images/favicon-32x32.png') }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ get_url(path='images/apple-touch-icon.png') }}">
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap">
+
   <!-- Feed -->
   <link rel="alternate" type="application/atom+xml" title="{{ config.title }}" href="{{ get_url(path='atom.xml') }}">
 
@@ -24,13 +34,13 @@
     <header class="site-nav">
       <nav class="site-nav__inner">
         <a href="{{ config.base_url }}" class="site-logo">
-          <span class="protocol">hitbox://</span><span class="domain">blog</span>
+          <img src="{{ get_url(path='images/hitbox-logo.svg') }}" alt="Hitbox" class="site-logo__img" width="143" height="60">
         </a>
         <ul class="nav-links">
-          <li><a href="{{ config.base_url }}/blog/" class="{% block nav_blog %}{% endblock %}">Blog</a></li>
-          <li><a href="{{ config.extra.github_url }}" rel="noopener">GitHub</a></li>
-          <li><a href="{{ config.extra.docs_url }}" rel="noopener">Docs</a></li>
+          <li><a href="{{ config.extra.docs_url }}" rel="noopener">docs</a></li>
+          <li><a href="{{ config.extra.github_url }}" rel="noopener">github</a></li>
         </ul>
+        <a href="{{ config.extra.contacts_url | default(value=config.extra.github_url) }}" class="nav-contacts" rel="noopener">contacts</a>
       </nav>
     </header>
 
