feat(blog): update design

--- a/shared/scss/_variables.scss
+++ b/shared/scss/_variables.scss
@@ -6,9 +6,9 @@
 $color-bg:           #131212;
 $color-surface:      #1a1a1a;
 $color-surface-alt:  #1e1e1e;
-$color-border:       #2a2a2a;
+$color-border:       #202020;
 $color-border-hover: #3a3a3a;
-$color-border-light: #ffffff;
+$color-border-light: #202020;
 
 $color-text:         #e3e3e3;
 $color-text-muted:   rgba(255, 255, 255, 0.4);
