--- a/blog/sass/_components.scss
+++ b/blog/sass/_components.scss
@@ -95,7 +95,7 @@
   &__excerpt {
     font-size: $font-size-xs;
     font-weight: 300;
-    line-height: 20px;
+    line-height: 1.62;
     color: $color-text;
     max-width: 590px;
   }
@@ -153,7 +153,7 @@
   &__excerpt {
     font-size: $font-size-xs;
     font-weight: 300;
-    line-height: 20px;
+    line-height: 1.62;
     color: $color-text;
   }
 
