feat(blog): add e-mail us

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -40,7 +40,7 @@
           <li><a href="{{ config.extra.docs_url }}" rel="noopener">docs</a></li>
           <li><a href="{{ config.extra.github_url }}" rel="noopener">github</a></li>
         </ul>
-        <a href="{{ config.extra.contacts_url | default(value=config.extra.github_url) }}" class="nav-contacts" rel="noopener">contacts</a>
+        <a href="mailto:info@hitbox.rs" class="nav-contacts">e-mail us</a>
       </nav>
     </header>
 
