--- a/blog/sass/_components.scss
+++ b/blog/sass/_components.scss
@@ -279,6 +279,7 @@
 
     > * {
       grid-column: 5 / -1;
+      min-width: 0;
 
       @media (max-width: $bp-md) {
         grid-column: 1 / -1;
@@ -353,6 +354,7 @@
 
     pre {
       margin-bottom: $space-4;
+      max-width: 100%;
     }
   }
 
