--- a/shared/scss/_base.scss
+++ b/shared/scss/_base.scss
@@ -12,6 +12,7 @@
 
 html {
   font-size: 16px;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
